--- a/recommendation/public/css/style.css
+++ b/recommendation/public/css/style.css
@@ -21,7 +21,7 @@ a.navbar-brand {
 }
 nav.navbar.navbar-inverse.navbar-fixed-top {
     padding: 1.5em 0;
-    background: #FFF;
+    background: #fff;
     margin: 0;
     box-shadow: 0px 0 2px #C1C1C1 !important;
 }
@@ -142,7 +142,7 @@ ul.nav.nav-sidebar li a{
     padding: .8em 0 .8em 3em;
 }
 .main-grids {
-  padding: 0;
+  padding: 0 0 1em 1em;
 }
 .sidebar ul.nav-sidebar li a:hover{
     background-color: #232323 !important;
@@ -458,7 +458,12 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
 	margin:1em 0;
 }
 .resent-grid {
-	padding-left: 0.1em;
+	position: relative;
+  	min-height: 1px;
+  	padding-left: 5px;
+  	padding-right: 5px;
+  	width: 20%;
+  	float: left;
 }
 .resent-grid-img{
 	position:relative;
@@ -472,6 +477,7 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
 }
 .resent-grid a img{
 	width:100%;
+	height: auto;
 }
 .time{
   position: absolute;
@@ -551,14 +557,17 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
 	font-family: 'Oswald', sans-serif;
 }
 .resent-grid-info{
-    background: #f7f7f7;
-    padding: 1em;
+	background: #f7f7f7;
+	padding: 0 5px 5px;
 }
 .resent-grid-info a.title{
   margin: 0;
   font-size: 18px;
   font-weight: 600;
   color: #525254;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis
 }
 .resent-grid-info a.title:hover{
     transition: inherit;
@@ -568,6 +577,9 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
   font-size: 14px;
   color: #9E9E9E;
   margin: .5em 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis
 }
 .resent-grid-info p.author a.author{
     color: #21DEEF;
@@ -2764,27 +2776,13 @@ background: url(../images/social.png) no-repeat 0px 0px;
 		padding: .52em 1em .52em 3em;
 	}
 }
-
-
-
-
-
-.col-5 {
-	position: relative;
-  	min-height: 1px;
-  	padding-right: 15px;
-  	padding-left: 15px;
-  	width: 20%;
-  	float: left;
-}
-
-
 .slogan {
 	position: absolute;
+	top: 0;
 	left: 100px;
-	right: 320px;
+	right: 300px;
 	text-align: center;
-	padding: 5px 0;
+	padding: 12px 0;
 }
 .slogan .slogan-title {
 	display: block;
@@ -2793,7 +2791,7 @@ background: url(../images/social.png) no-repeat 0px 0px;
 	
 }
 
-.header-top-right.top-search input[type=text] {
+.navbar-right.top-search input[type=text] {
 	min-width: 280px;
 }
 
