--- a/recommendation/public/css/style.css
+++ b/recommendation/public/css/style.css
@@ -4,10 +4,14 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
+
+html, body {
+	height: 100%;
+}
 body{
 	background:#fff;
 	font-size:100%;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body a {
   transition: 0.5s all;
@@ -21,7 +25,7 @@ a.navbar-brand {
 }
 nav.navbar.navbar-inverse.navbar-fixed-top {
     padding: 1.5em 0;
-    background: #FFF;
+    background: #fff;
     margin: 0;
     box-shadow: 0px 0 2px #C1C1C1 !important;
 }
@@ -56,7 +60,7 @@ form.navbar-form.navbar-right {
     border: 1px solid #ccc;
 }
 .top-search form input[type="submit"] {
-    background: url(../images/9.png) no-repeat 0px 0px !important;
+	background: url(../images/9.png) no-repeat 0px 0px !important;
     width: 18px !important;
     height: 18px !important;
     border: none !important;
@@ -142,7 +146,7 @@ ul.nav.nav-sidebar li a{
     padding: .8em 0 .8em 3em;
 }
 .main-grids {
-  padding: 0;
+  padding: 0 0 1em 1em;
 }
 .sidebar ul.nav-sidebar li a:hover{
     background-color: #232323 !important;
@@ -458,7 +462,12 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
 	margin:1em 0;
 }
 .resent-grid {
-	padding-left: 0.1em;
+	position: relative;
+  	min-height: 1px;
+  	padding-left: 5px;
+  	padding-right: 5px;
+  	width: 16.666%;
+  	float: left;
 }
 .resent-grid-img{
 	position:relative;
@@ -472,6 +481,7 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
 }
 .resent-grid a img{
 	width:100%;
+	height: auto;
 }
 .time{
   position: absolute;
@@ -551,14 +561,17 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
 	font-family: 'Oswald', sans-serif;
 }
 .resent-grid-info{
-    background: #f7f7f7;
-    padding: 1em;
+	background: #f7f7f7;
+	padding: 0 5px 5px;
 }
 .resent-grid-info a.title{
   margin: 0;
   font-size: 18px;
   font-weight: 600;
   color: #525254;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis
 }
 .resent-grid-info a.title:hover{
     transition: inherit;
@@ -568,6 +581,9 @@ a.btn.btn-primary.btn-lg.see-button.hvr-shutter-out-horizontal {
   font-size: 14px;
   color: #9E9E9E;
   margin: .5em 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis
 }
 .resent-grid-info p.author a.author{
     color: #21DEEF;
@@ -2764,27 +2780,14 @@ background: url(../images/social.png) no-repeat 0px 0px;
 		padding: .52em 1em .52em 3em;
 	}
 }
-
-
-
-
-
-.col-5 {
-	position: relative;
-  	min-height: 1px;
-  	padding-right: 15px;
-  	padding-left: 15px;
-  	width: 20%;
-  	float: left;
-}
-
-
 .slogan {
 	position: absolute;
+	display: none;
+	top: 0;
 	left: 100px;
-	right: 320px;
+	right: 300px;
 	text-align: center;
-	padding: 5px 0;
+	padding: 12px 0;
 }
 .slogan .slogan-title {
 	display: block;
@@ -2792,15 +2795,21 @@ background: url(../images/social.png) no-repeat 0px 0px;
 	margin: 0;
 	
 }
-
-.header-top-right.top-search input[type=text] {
-	min-width: 280px;
+.navbar-right.top-search form {
+	display: block;
+	width: 200px;
+	width: 280px;
+	padding: 0;
+}
+.navbar-right.top-search input[type=text] {
+	min-width: 100%;
 }
 
 
 
 .page-nav {
 	position: absolute;
+	z-index: 10000;
 	display: block;
 	background-color: rgba(0,0,0,.2);
 	color: #fff;
@@ -2827,4 +2836,44 @@ background: url(../images/social.png) no-repeat 0px 0px;
 }
 .single-right-grids {
 	display: table;
+}
+
+.main-wrapper,
+.main-wrapper > .row {
+	height: 100%;
+}
+.main-wrapper ::-webkit-scrollbar {
+	width: 0;
+	background-color: transparent;
+}
+.main-wrapper > .row > .main {
+	height: 100%;
+	overflow-y: scroll;
+}
+
+.page-header {
+	display: block;
+	margin: 0 0 10px;
+	padding: 20px 0 10px;
+}
+.page-header h1,
+.page-header h2,
+.page-header h3 {
+	display: block;
+	margin: 0;
+	padding:  0;
+	float: left;
+}
+.page-header .pagination {
+	padding: 0;
+	margin: 0;
+	
+}
+body .tooltip-inner {
+	background-color: #336699;
+}
+@media (min-width: 768px) {
+	.slogan {
+		display: block;
+	}
 }
