--- a/recommendation/public/css/style.css
+++ b/recommendation/public/css/style.css
@@ -2793,7 +2793,7 @@ background: url(../images/social.png) no-repeat 0px 0px;
 	display: block;
 	font-weight: bold;
 	margin: 0;
-	
+	font-family:Tahoma;
 }
 .navbar-right.top-search form {
 	display: block;
