--- a/recommendation/public/css/style1.css
+++ b/recommendation/public/css/style1.css
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 body{
 	background:#fff;
 	font-size:100%;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Patrick Hand SC', cursive;
 }
 body a {
   transition: 0.5s all;
@@ -2790,7 +2790,7 @@ background: url(../images/social.png) no-repeat 0px 0px;
 	display: block;
 	font-weight: bold;
 	margin: 0;
-	
+
 }
 
 .header-top-right.top-search input[type=text] {
