--- a/recommendation/web/css/style.css
+++ b/recommendation/web/css/style.css
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 body{
 	background:#fff;
 	font-size:100%;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Spectral', serif !important;
 }
 body a {
   transition: 0.5s all;
