--- a/recommendation/public/css/style.css
+++ b/recommendation/public/css/style.css
@@ -26,6 +26,7 @@ a.navbar-brand {
 nav.navbar.navbar-inverse.navbar-fixed-top {
     padding: 1.5em 0;
     background: #fff;
+	height:120px;
     margin: 0;
     box-shadow: 0px 0 2px #C1C1C1 !important;
 }
@@ -66,7 +67,7 @@ form.navbar-form.navbar-right {
     border: none !important;
     position: absolute !important;
     outline: none !important;
-    top: 9px;
+    top: 50%;
     right: 26px;
 }
 .header-top-right {
@@ -2780,6 +2781,9 @@ background: url(../images/social.png) no-repeat 0px 0px;
 		padding: .52em 1em .52em 3em;
 	}
 }
+.slogan h4 {
+	font-size:25px;
+}
 .slogan {
 	position: absolute;
 	display: none;
@@ -2788,6 +2792,7 @@ background: url(../images/social.png) no-repeat 0px 0px;
 	right: 300px;
 	text-align: center;
 	padding: 12px 0;
+	
 }
 .slogan .slogan-title {
 	display: block;
@@ -2841,6 +2846,7 @@ background: url(../images/social.png) no-repeat 0px 0px;
 .main-wrapper,
 .main-wrapper > .row {
 	height: 100%;
+	padding-top:10px;
 }
 .main-wrapper ::-webkit-scrollbar {
 	width: 0;
@@ -2880,6 +2886,18 @@ background: url(../images/social.png) no-repeat 0px 0px;
 		display: block;
 	}
 }
-.helper {
-    
+.helper-icon {
+    width: 24px;
+    position: absolute;
+    right: 21%;
+    top: 35px;
+}
+.helper{
+	text-align:top;
+}
+#searchicon{
+	top:30%;
+}
+.table-responsive{
+	font-size:18px;
 }
